--- a/app/views/movies/watchlist.html.erb
+++ b/app/views/movies/watchlist.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-3xl font-bold mb-8 text-gray-800 text-center">Watchlist</h1>
 
-<div class="max-w-3xl mx-auto px-6 mt-12">
+<div class="max-w-5xl mx-auto px-6 mt-12">
 
 
   <div class="flex justify-end pb-16">
@@ -17,46 +17,55 @@
       <th class="py-2 pr-6 font-medium text-right w-24">Year</th>
       <th class="py-2 pr-6 font-medium text-right w-28">Runtime</th>
       <th class="py-2 pr-6 font-medium">Available on</th>
+      <th class="py-2 pr-6 font-medium text-left">Pitch</th>
     </tr>
   </thead>
-  <tbody>
-    <% @movies.each do |movie| %>
-      <tr class="">
-        <td class="py-3 pr-4">
-          <%= link_to movie.title, movie_path(movie), class: "text-black font-semibold hover:underline" %>
-        </td>
-       
-        <td class="py-3 pr-4 text-gray-700 text-right">
-          <%= movie.release_date&.year %>
-        </td>
-        <td class="py-3 pr-4 text-gray-700 text-right">
-          <%= movie.runtime.present? ? "#{movie.runtime} min" : "—" %>
-        </td>
-         <td class="py-3 pr-6">
-          <% watch_providers = WatchAvailabilityService.new(movie).call %>
+    <tbody>
+      <% @watchlist_items.each do |item| %>
+        <% movie = item.movie %>
+        <tr class="">
+          <td class="py-3 pr-4">
+            <%= link_to movie.title, movie_path(movie), class: "text-black font-semibold hover:underline" %>
+          </td>
 
-          <% major_platforms = {
-            "Netflix" => "netflix.png",
-            "Disney Plus" => "disney.png",
-            "Amazon Prime Video" => "prime.png"
-          } %>
+          <td class="py-3 pr-4 text-gray-700 text-right">
+            <%= movie.release_date&.year %>
+          </td>
+          <td class="py-3 pr-4 text-gray-700 text-right">
+            <%= movie.runtime.present? ? "#{movie.runtime} min" : "—" %>
+          </td>
+           <td class="py-3 pr-6">
+            <% watch_providers = WatchAvailabilityService.new(movie).call %>
 
-          <div class="flex gap-3">
-            <% major_platforms.each do |platform, image| %>
-              <% available = watch_providers.any? { |_region, providers| providers.include?(platform) } %>
+            <% major_platforms = {
+              "Netflix" => "netflix.png",
+              "Disney Plus" => "disney.png",
+              "Amazon Prime Video" => "prime.png"
+            } %>
 
-              <% if available %>
-                <%= image_tag image,
-                  alt: platform,
-                  class: "h-5 w-auto opacity-80",
-                  title: platform %>
+            <div class="flex gap-3">
+              <% major_platforms.each do |platform, image| %>
+                <% available = watch_providers.any? { |_region, providers| providers.include?(platform) } %>
+
+                <% if available %>
+                  <%= image_tag image,
+                    alt: platform,
+                    class: "h-5 w-auto opacity-80",
+                    title: platform %>
+                <% end %>
               <% end %>
+            </div>
+          </td>
+             <td class="py-3 pr-4 text-gray-700 text-left">
+            <% if item.pitch.present? %>
+              <span class="bg-indigo-100 text-xs text-indigo-800 italic rounded-full px-3 py-1 inline-block">
+                <%= truncate(strip_tags(item.pitch), length: 120) %>
+              </span>
             <% end %>
-          </div>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
 </table>
 </div>
 
