--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,7 +5,7 @@
   <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
     <% @popular_movies.each do |movie| %>
       <div class="bg-white rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:shadow-xl hover:scale-105">
-        <%= link_to movie_path(movie.id), class: "block h-full" do %>
+  <%= link_to movie_path(movie), class: "block h-full" do %>
           <div class="relative pb-2/3">
             <% if movie.poster_path %>
               <img
