--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,6 +17,7 @@
         <div class="hidden md:block ml-10">
           <div class="flex items-baseline space-x-4">
             <%= link_to "Watchlist", "/watchlist", class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
+            <%= link_to "Lists", lists_path, class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
             <%= link_to "Actors", "/actors", class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
             <%= link_to "Pitch", "/pitch", class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
           </div>
@@ -76,6 +77,7 @@
     <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
       <%= link_to "Home", root_path, class: "text-gray-900 hover:bg-indigo-500 block px-3 py-2 rounded-md text-base font-medium" %>
       <%= link_to "Watchlist", watchlist_path, class: "text-gray-900 hover:bg-indigo-500 block px-3 py-2 rounded-md text-base font-medium" %>
+      <%= link_to "Lists", lists_path, class: "text-gray-900 hover:bg-indigo-500 block px-3 py-2 rounded-md text-base font-medium" %>
       <%= link_to "Actors", actors_path, class: "text-gray-900 hover:bg-indigo-500 block px-3 py-2 rounded-md text-base font-medium" %>
       <%= link_to "Pitch", pitch_path, class: "text-gray-900 hover:bg-indigo-500 block px-3 py-2 rounded-md text-base font-medium" %>
 
