--- a/app/views/search/_search_form.html.erb
+++ b/app/views/search/_search_form.html.erb
@@ -1,10 +1,10 @@
 <div class="max-w-3xl mx-auto">
   <%= form_with url: search_path, method: :get, class: "flex w-full" do |f| %>
-    <div class="flex w-full shadow-sm rounded-md overflow-hidden">
+    <div class="flex w-full shadow-sm rounded-3xl overflow-hidden">
       <%= f.text_field :query,
                     value: query,
-                    placeholder: "Search movies & shows...",
-                    class: "flex-grow px-4 py-3 border-none focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
+                    placeholder: "Type here ....",
+                    class: "flex-grow px-4 py-3 border-none rounded-xl focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
       <%= f.submit "Search",
                 class: "bg-indigo-600 text-white px-6 py-3 font-medium hover:bg-indigo-700 transition-colors" %>
     </div>
