--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,8 +1,6 @@
-<div class="container mx-auto px-4 py-8">
-  <h1 class="text-3xl font-bold mb-6">Search Results</h1>
-  <%= render 'search/search_form', query: @query %>
-  <% if @query.present? %>
-    <div class="mt-8">
+<div class="container mx-auto px-4 ">
+<% if @query.present? %>
+
       <% if @movies.present? || @tmdb_movies.present? %>
         <h2 class="text-2xl font-semibold mb-4">Movies</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6">
@@ -125,5 +123,5 @@
         <% end %>
       </div>
     </div>
-  <% end %>
-</div>
+  <% end %> 
+
